--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ body {
     overflow-x: hidden;
 }
 
+* {
+    user-select: none;
+    -webkit-user-select: none; /* For Safari */
+    -moz-user-select: none; /* For Firefox */
+    -ms-user-select: none; /* For older Internet Explorer */
+}
+
+
 .container {
     display: flex;
     flex-direction: column;
