--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
     max-width: 350px;
     padding: 20px;
     box-sizing: border-box;
-    margin-top: 2vh;
+    margin-top: 0;
     margin-bottom: 0; /* Keep container centered */
     position: relative; /* Keeps everything in place */
 }
@@ -48,7 +48,7 @@ body {
     font-size: 1.2em;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     color: #4a4a4a;
 }
 
